# edit-sphere

./: app.py  bear_a_counter_handler.db  config.py  config.yaml  display_rules.json  display_rules.yaml  pyproject.toml
babel/translations/en/LC_MESSAGES/: messages.mo  messages.po
babel/translations/it/LC_MESSAGES/: messages.mo  messages.po
edit-sphere/: app.py  filters.py
edit-sphere/templates/: _base.html  entities.html  triples.html
edit_sphere/: app.py  editor.py  filters.py  forms.py
edit_sphere/static/css/: styles.css
edit_sphere/templates/: _base.html  _base.jinja  create_entity.jinja  endpoint.html  entities.html  entity_history.html  entity_history.jinja  entity_version.html  entity_version.jinja  footer.html  footer.jinja  index.html  index.jinja  navigation.html  navigation.jinja  triples.html  triples.jinja
resources/: datatypes.py  shacl.ttl
test/meta_subset/: output_1.nq  output_10.nq  output_11.nq  output_12.nq  output_13.nq  output_14.nq  output_15.nq  output_16.nq  output_17.nq  output_18.nq  output_19.nq  output_2.nq  output_20.nq  output_21.nq  output_22.nq  output_23.nq  output_24.nq  output_25.nq  output_26.nq  output_27.nq  output_28.nq  output_29.nq  output_3.nq  output_30.nq  output_31.nq  output_4.nq  output_5.nq  output_6.nq  output_7.nq  output_8.nq  output_9.nq
